*** Unreleased ***

*** Version 20.10.04       (2021-02-15)   ***
-Fixes
Fix datatable with fixed columns
Don't show right arrow on locked plannings or for agents without authorization
Fix a wrong links on absence and holiday notifications
Use baseURL for /ics/ajax.resetURL.php
Fix/Statistics : Initialize information about agents
Fix reset URL for holiday index and rename related button
SSL errors can occur during MS Graph imports.
Escape json string containing skill in agent's form


*** Version 20.10.03       (2021-01-26)   ***
-Fixes
Fix CAS redirect after authentication
Handle unset halfday when saving holiday
Check if agents are blocked when right copying planning's cell
Handle specifics js chars in id param of supprime function

- Enhancements
Get working hours information to define meridian break

*** Version 20.10.02       (2020-12-24)   ***
-Fixes
Add missing class 'checkdate' on holiday's forms
Fix a JS control on holiday forms
Retrieve correct public holiday name in calendar
Replace heredoc string by double quotes string at end of weekly planning
Take in account empty site in agent's times in holiday validation workflow
Fix a typo on tools/fix_encoding_issues.php

*** Version 20.10.01       (2020-11-30)   ***
- Enhancements
Move function calculPresence in dedicated class (WorkingHours)
Allows more permissive entries in working hours
Update DataTable libraries and remove flash buttons
Use APP_ENV in legacy code (config.php) and move uploaded files
Upgrade PHP to 7.4 in composer.json
Absences multi-sites: show only managed agents in list and in add form
Update install.sh : check if PHP version > 7.4, run composer update if needed
Upgrade symfony/flex to release 1.9.8

-Fixes
Remove HTML entities in closig days
Working hours fixes
Add validate icon
Use PHP default timezone.
Keep absence's other reason when there is recurrence
Show non validated planning in personal calendar
Fix display of agents on vacation on the week schedules